# snake

./: .gitignore  .gitmodules  CMakeLists.txt  build-and-run.sh  build.sh  main.cpp
src/: CMakeLists.txt  main.cpp
